# erpnext_email_bridge

./: .gitignore  LICENSE  MANIFEST.in  README.md  api.py  apps.json  email_handler.py  hooks.py  pyproject.toml  scheduled_tasks.py
boot/: boot.py
erpnext_email_bridge/: __init__.py  modules.txt  patches.txt
erpnext_email_bridge/email_bridge/: __init__.py
overrides/: __init__.py  email_account.py
public/js/: email_bridge.js
