[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "erpnext_email_bridge" 
version = "0.1.0"
description = "Microsoft 365 Email Integration via Middleware for ERPNext"
authors = [
    {name = "BlueRock Global PE", email = "matt@directics.com"}
]
dependencies = [
    "frappe",
    "erpnext", 
    "httpx>=0.24.0",
    "requests>=2.28.0"
]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: ERPNext",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/BlueRock-Global-PE/erpnext_email_bridge"
Repository = "https://github.com/BlueRock-Global-PE/erpnext_email_bridge"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0"
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
